fixed keyboard "bug" on mobile

--- a/style-responsive.css
+++ b/style-responsive.css
@@ -91,6 +91,7 @@
   #sketch-holder {
     width: 75%;
     align-self: center;
+    top:16px;
 }
 
 #quest-container {
